--- a/Juan Carlos Bustos/inicio/index.html
+++ b/Juan Carlos Bustos/inicio/index.html
@@ -58,7 +58,7 @@
 
 	<h3 ALIGN=center> <strong> Mision </strong> </h3>
 
-	<p ALIGN=center>La mision de la agencia de viajes <strong> <i> "El vuelo loco"</i> </strong> es poder brindarle a las personas una experiencia inolvidable <br>
+	<p ALIGN=center>La mision de la agencia de viajes <strong> <i> "EL vuelo loco"</i> </strong> es poder brindarle a las personas una experiencia inolvidable <br>
                    con los  paquetes de viajes que estan disponibles tanto Nacionalmente como Intrernacionalmente y a precios accesibles para la comodidad del bolsillo.</p>
   
 	<h3 ALIGN=center> <strong> Vision </strong> </h3>
